styling for navbar and header for all screen

--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bandsite</title>
+    <link rel="stylesheet" href="./styles/bio.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+  </head>
+  <body>
+   <header class="header">
+  <div class="header__title">
+    <img src="./assets/logos/Logo-bandsite.svg" alt="bandsite-logo">
+  </div>
+  <nav class="header__nav">
+    <ul class="header__nav-list">
+      <li class="header__nav-item">
+        <a href="./index.html" class="header__nav-link" aria-label="Biography">Biography</a>
+      </li>
+      <li class="header__nav-item">
+        <a href="#" class="header__nav-link" aria-label="Shows">Shows</a>
+      </li>
+    </ul>
+  </nav>
+</header>
 
-</body>
+<section class="hero">
+  <div class="hero__image-wrapper">
+    <img src="./assets/images/hero-bio.jpg" alt="A description of the hero image" class="hero__image" />
+  </div>
+  <div class="hero__content">
+    <h2 class="hero__title">The Bee Knees</h2>
+  </div>
+</section>
+      <main>
+        <section></section>
+      </main>
+    </header>
+  </body>
 </html>
