navbar for tablet fixed

--- a/index.html
+++ b/index.html
@@ -8,69 +8,91 @@
     <link rel="stylesheet" href="./styles/global.css" />
   </head>
   <body>
-   <header class="header">
-  <div class="header__title">
-    <img src="./assets/logos/Logo-bandsite.svg" alt="bandsite-logo">
-  </div>
-  <nav class="header__nav">
-    <ul class="header__nav-list">
-      <li class="header__nav-item">
-        <a href="./index.html" class="header__nav-link" aria-label="Biography">Biography</a>
-      </li>
-      <li class="header__nav-item">
-        <a href="#" class="header__nav-link" aria-label="Shows">Shows</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+    <header class="header">
+      <img class="header__title" src="./assets/logos/Logo-bandsite.svg" alt="bandsite-logo" />
 
-<section class="hero">
-  <div class="hero__image-wrapper">
-    <img src="./assets/images/hero-bio.jpg" alt="A description of the hero image" class="hero__image" />
-  </div>
-  <div class="hero__text">
-    <h2 class="hero__title">The Bee Knees</h2>
-  </div>
-</section>
-<article class="about-musician">
-  <div class="about-musician__heading">
-    <div class="about-musician__text">
-      <h2>About the Musicians</h2>
-    </div>
-    <figure class="about-musician__image">
-      <img src="./assets/images/band.jpg" alt="band-photo about-us">
-
-    </figure>
-    <div class="about-musician__quote">
-      <h3>“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board.’”</h3>
-      <p>- Lead vocalist of The Bees Knees</p>
-    </div>
-    <div class="about-musician__description">
-      <h3>The Bees Knees</h3>
-      <p>The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist, and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well-known record label.
-
-      From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up-and-coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
-    </div>
-  </div>
-</article>
-<article class="bandsite__photo-gallery">
-<div class="gallery-container">
-  <img src="./assets/images/Photo-gallery-1.jpg" alt="crowd feeling the beat">
-  <img src="./assets/images/Photo-gallery-2.jpg" alt="a girl enjoying the music ">
-  <img src="./assets/images/Photo-gallery-3.jpg" alt="hands up in the air">
-  <img src="./assets/images/Photo-gallery-4.jpg" alt="girl waving hand to artist near stage">
-  <img src="./assets/images/Photo-gallery-5.jpg" alt="wild colorful lightning atmosphere">
-  <img src="./assets/images/Photo-gallery-6.jpg" alt="">
-  <img src="./assets/images/Photo-gallery-7.jpg" alt="">
-  <img src="./assets/images/Photo-gallery-8.jpg" alt="">
-  <img src="./assets/images/Photo-gallery-9.jpg" alt="">
-</div>
-</article>
-
-      </main>
+      <div class="nav-container">
+        <nav class="header__nav">
+          <ul class="header__nav-list">
+            <li class="header__nav-item">
+              <a href="./index.html" class="header__nav-link" aria-label="Biography">Biography</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#" class="header__nav-link" aria-label="Shows">Shows</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
-  </body>
-  <footer>
+    <!--
+    <section class="hero">
+      <div class="hero__image-wrapper">
+        <img
+          src="./assets/images/hero-bio.jpg"
+          alt="A description of the hero image"
+          class="hero__image"
+        />
+      </div>
+      <div class="hero__text">
+        <h2 class="hero__title">The Bee Knees</h2>
+      </div>
+    </section>
+    <article class="about-musician">
+      <div class="about-musician__heading">
+        <div class="about-musician__text">
+          <h2>About the Musicians</h2>
+        </div>
 
-  </footer>
+        <img
+          class="about-musician__image"
+          src="./assets/images/band.jpg"
+          alt="band-photo about-us"
+        />
+
+        <div class="about-musician__quote">
+          <h3>
+            “We push each other to be the best. It’s not uncommon for one of us to say ‘this needs
+            to be better, back to the drawing board.’”
+          </h3>
+          <p>- Lead vocalist of The Bees Knees</p>
+        </div>
+        <div class="about-musician__description">
+          <h3>The Bees Knees</h3>
+          <p>
+            The Bees Knees is a pop rock band originating from San Francisco, California. The band
+            consists of a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a
+            keyboardist, and a drummer. The band achieved its first commercial success as an
+            unsigned act, drawing attention from their future manager. Having extensive experience
+            working with both new and seasoned acts, the manager was confident the band could
+            succeed even further with more support, pushing The Bees Knees to sign with a well-known
+            record label. From there, the band has soared, gaining international recognition and
+            ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the
+            band’s original and organic attitude, solidifying their place as one of the hottest and
+            fastest up-and-coming acts of this century. Fans affectionately refer to themselves as
+            “The Hive” and are drawn to their candid and authentic performances on stage. The Bees
+            Knees are currently recording their second studio album, looking to be released in early
+            2024.
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="bandsite__photo-gallery">
+      <div class="gallery-container">
+        <img src="./assets/images/Photo-gallery-1.jpg" alt="crowd feeling the beat" />
+        <img src="./assets/images/Photo-gallery-2.jpg" alt="a girl enjoying the music " />
+        <img src="./assets/images/Photo-gallery-3.jpg" alt="hands up in the air" />
+        <img
+          src="./assets/images/Photo-gallery-4.jpg"
+          alt="girl waving hand to artist near stage"
+        />
+        <img src="./assets/images/Photo-gallery-5.jpg" alt="wild colorful lightning atmosphere" />
+        <img src="./assets/images/Photo-gallery-6.jpg" alt="" />
+        <img src="./assets/images/Photo-gallery-7.jpg" alt="" />
+        <img src="./assets/images/Photo-gallery-8.jpg" alt="" />
+        <img src="./assets/images/Photo-gallery-9.jpg" alt="" />
+      </div>
+    </article>
+    <footer></footer>
+     -->
+  </body>
 </html>
