--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
       </div>
     </header>
-    <!--
+
     <section class="hero">
       <div class="hero__image-wrapper">
         <img
@@ -37,7 +37,7 @@
         <h2 class="hero__title">The Bee Knees</h2>
       </div>
     </section>
-    <article class="about-musician">
+    <!-- <article class="about-musician">
       <div class="about-musician__heading">
         <div class="about-musician__text">
           <h2>About the Musicians</h2>
@@ -91,8 +91,7 @@
         <img src="./assets/images/Photo-gallery-8.jpg" alt="" />
         <img src="./assets/images/Photo-gallery-9.jpg" alt="" />
       </div>
-    </article>
+    </article> -->
     <footer></footer>
-     -->
   </body>
 </html>
