feat: style hero image and text with responsive layout adjustments

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <header class="header">
-      <img class="header__title" src="./assets/logos/Logo-bandsite.svg" alt="bandsite-logo" />
-
-      <div class="nav-container">
+      <img class="header__logo" src="./assets/logos/Logo-bandsite.svg" alt="bandsite-logo" />
+      <div class="header__nav-container">
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
@@ -25,6 +24,7 @@
       </div>
     </header>
 
+    <!-- Hero Section -->
     <section class="hero">
       <div class="hero__image-wrapper">
         <img
