--- a/index.html
+++ b/index.html
@@ -37,61 +37,50 @@
         <h2 class="hero__title">The Bee Knees</h2>
       </div>
     </section>
-    <!-- <article class="about-musician">
+
+    <!-- About musician part -->
+    <article class="about-musician">
       <div class="about-musician__heading">
         <div class="about-musician__text">
-          <h2>About the Musicians</h2>
+          <h2 class="about-musician__heading-text">About the Musicians</h2>
         </div>
-
-        <img
-          class="about-musician__image"
-          src="./assets/images/band.jpg"
-          alt="band-photo about-us"
-        />
-
-        <div class="about-musician__quote">
-          <h3>
+        <div class="about-musician__image-wrapper">
+          <img
+            class="about-musician__image"
+            src="./assets/images/band.jpg"
+            alt="The Bees Knees Band Photo"
+          />
+        </div>
+        <blockquote class="about-musician__quote">
+          <p>
             “We push each other to be the best. It’s not uncommon for one of us to say ‘this needs
             to be better, back to the drawing board.’”
-          </h3>
-          <p>- Lead vocalist of The Bees Knees</p>
-        </div>
+          </p>
+          <p class="about-musician__role">- Lead vocalist of The Bees Knees</p>
+        </blockquote>
         <div class="about-musician__description">
-          <h3>The Bees Knees</h3>
-          <p>
+          <h3 class="about-musician__description-title">The Bees Knees</h3>
+          <p class="about-musician__description-text">
             The Bees Knees is a pop rock band originating from San Francisco, California. The band
             consists of a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a
             keyboardist, and a drummer. The band achieved its first commercial success as an
             unsigned act, drawing attention from their future manager. Having extensive experience
             working with both new and seasoned acts, the manager was confident the band could
             succeed even further with more support, pushing The Bees Knees to sign with a well-known
-            record label. From there, the band has soared, gaining international recognition and
-            ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the
-            band’s original and organic attitude, solidifying their place as one of the hottest and
-            fastest up-and-coming acts of this century. Fans affectionately refer to themselves as
-            “The Hive” and are drawn to their candid and authentic performances on stage. The Bees
-            Knees are currently recording their second studio album, looking to be released in early
-            2024.
+            record label.
+          </p>
+          <p class="about-musician__description-text">
+            From there, the band has soared, gaining international recognition and ranking in the
+            top 10 on the Poster Charts. New fans immediately fell in love with the band’s original
+            and organic attitude, solidifying their place as one of the hottest and fastest
+            up-and-coming acts of this century. Fans affectionately refer to themselves as “The
+            Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees
+            are currently recording their second studio album, looking to be released in early 2024.
           </p>
         </div>
       </div>
     </article>
-    <article class="bandsite__photo-gallery">
-      <div class="gallery-container">
-        <img src="./assets/images/Photo-gallery-1.jpg" alt="crowd feeling the beat" />
-        <img src="./assets/images/Photo-gallery-2.jpg" alt="a girl enjoying the music " />
-        <img src="./assets/images/Photo-gallery-3.jpg" alt="hands up in the air" />
-        <img
-          src="./assets/images/Photo-gallery-4.jpg"
-          alt="girl waving hand to artist near stage"
-        />
-        <img src="./assets/images/Photo-gallery-5.jpg" alt="wild colorful lightning atmosphere" />
-        <img src="./assets/images/Photo-gallery-6.jpg" alt="" />
-        <img src="./assets/images/Photo-gallery-7.jpg" alt="" />
-        <img src="./assets/images/Photo-gallery-8.jpg" alt="" />
-        <img src="./assets/images/Photo-gallery-9.jpg" alt="" />
-      </div>
-    </article> -->
+
     <footer></footer>
   </body>
 </html>
