feat: Add responsive styling for photo gallery using SCSS

--- a/index.html
+++ b/index.html
@@ -80,7 +80,20 @@
         </div>
       </div>
     </article>
-
+    <article class="gallery">
+      <h2 class="gallery__title">Photo Gallery</h2>
+      <div class="gallery__container">
+        <img src="/assets/images/Photo-gallery-1.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-2.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-3.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-4.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-5.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-6.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-7.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-8.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-9.jpg" alt="Gallery Image 1" class="gallery__item" />
+      </div>
+    </article>
     <footer></footer>
   </body>
 </html>
