add alt text for image of gallery

--- a/index.html
+++ b/index.html
@@ -83,15 +83,43 @@
     <article class="gallery">
       <h2 class="gallery__title">Photo Gallery</h2>
       <div class="gallery__container">
-        <img src="/assets/images/Photo-gallery-1.jpg" alt="Gallery Image 1" class="gallery__item" />
-        <img src="/assets/images/Photo-gallery-2.jpg" alt="Gallery Image 1" class="gallery__item" />
-        <img src="/assets/images/Photo-gallery-3.jpg" alt="Gallery Image 1" class="gallery__item" />
-        <img src="/assets/images/Photo-gallery-4.jpg" alt="Gallery Image 1" class="gallery__item" />
-        <img src="/assets/images/Photo-gallery-5.jpg" alt="Gallery Image 1" class="gallery__item" />
-        <img src="/assets/images/Photo-gallery-6.jpg" alt="Gallery Image 1" class="gallery__item" />
-        <img src="/assets/images/Photo-gallery-7.jpg" alt="Gallery Image 1" class="gallery__item" />
-        <img src="/assets/images/Photo-gallery-8.jpg" alt="Gallery Image 1" class="gallery__item" />
-        <img src="/assets/images/Photo-gallery-9.jpg" alt="Gallery Image 1" class="gallery__item" />
+        <img src="/assets/images/Photo-gallery-1.jpg" alt="crowd-cheer" class="gallery__item" />
+        <img
+          src="/assets/images/Photo-gallery-2.jpg"
+          alt="lady having good vibe"
+          class="gallery__item"
+        />
+        <img
+          src="/assets/images/Photo-gallery-3.jpg"
+          alt="crowds hands up in live"
+          class="gallery__item"
+        />
+        <img
+          src="/assets/images/Photo-gallery-4.jpg"
+          alt="lady hands up in live"
+          class="gallery__item"
+        />
+        <img
+          src="/assets/images/Photo-gallery-5.jpg"
+          alt="beautiful atomsphere"
+          class="gallery__item"
+        />
+        <img
+          src="/assets/images/Photo-gallery-6.jpg"
+          alt="artist enjoying moment in stage"
+          class="gallery__item"
+        />
+        <img
+          src="/assets/images/Photo-gallery-7.jpg"
+          alt="beautiful lighting and moment crowd-cheer"
+          class="gallery__item"
+        />
+        <img
+          src="/assets/images/Photo-gallery-8.jpg"
+          alt="playing with instruement"
+          class="gallery__item"
+        />
+        <img src="/assets/images/Photo-gallery-9.jpg" alt="dance time" class="gallery__item" />
       </div>
     </article>
     <footer></footer>
