feat: add responsive photo collery for all media screen using flexbox

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             alt="The Bees Knees Band Photo"
           />
         </div>
-        <blockquote class="about-musician__quote">
+        <div class="about-musician__quote">
           <p>
             “We push each other to be the best. It’s not uncommon for one of us to say ‘this needs
             to be better, back to the drawing board.’”
           </p>
           <p class="about-musician__role">- Lead vocalist of The Bees Knees</p>
-        </blockquote>
+        </div>
         <div class="about-musician__description">
-          <h3 class="about-musician__description-title">The Bees Knees</h3>
+          <h3 class="about-musician__title">The Bees Knees</h3>
           <p class="about-musician__description-text">
             The Bees Knees is a pop rock band originating from San Francisco, California. The band
             consists of a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a
