--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             alt="The Bees Knees Band Photo"
           />
         </div>
+
         <div class="about-musician__quote">
           <p>
             “We push each other to be the best. It’s not uncommon for one of us to say ‘this needs
@@ -60,23 +61,26 @@
         </div>
         <div class="about-musician__description">
           <h3 class="about-musician__title">The Bees Knees</h3>
-          <p class="about-musician__description-text">
-            The Bees Knees is a pop rock band originating from San Francisco, California. The band
-            consists of a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a
-            keyboardist, and a drummer. The band achieved its first commercial success as an
-            unsigned act, drawing attention from their future manager. Having extensive experience
-            working with both new and seasoned acts, the manager was confident the band could
-            succeed even further with more support, pushing The Bees Knees to sign with a well-known
-            record label.
-          </p>
-          <p class="about-musician__description-text">
-            From there, the band has soared, gaining international recognition and ranking in the
-            top 10 on the Poster Charts. New fans immediately fell in love with the band’s original
-            and organic attitude, solidifying their place as one of the hottest and fastest
-            up-and-coming acts of this century. Fans affectionately refer to themselves as “The
-            Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees
-            are currently recording their second studio album, looking to be released in early 2024.
-          </p>
+          <div class="about-musician__info">
+            <p class="about-musician__description-text">
+              The Bees Knees is a pop rock band originating from San Francisco, California. The band
+              consists of a dynamic lineup featuring two lead vocalists, two guitarists, a bassist,
+              a keyboardist, and a drummer. The band achieved its first commercial success as an
+              unsigned act, drawing attention from their future manager. Having extensive experience
+              working with both new and seasoned acts, the manager was confident the band could
+              succeed even further with more support, pushing The Bees Knees to sign with a
+              well-known record label.
+            </p>
+            <p class="about-musician__description-text">
+              From there, the band has soared, gaining international recognition and ranking in the
+              top 10 on the Poster Charts. New fans immediately fell in love with the band’s
+              original and organic attitude, solidifying their place as one of the hottest and
+              fastest up-and-coming acts of this century. Fans affectionately refer to themselves as
+              “The Hive” and are drawn to their candid and authentic performances on stage. The Bees
+              Knees are currently recording their second studio album, looking to be released in
+              early 2024.
+            </p>
+          </div>
         </div>
       </div>
     </article>
