feat-- footer adjustment for mobile

--- a/index.html
+++ b/index.html
@@ -126,6 +126,37 @@
         <img src="/assets/images/Photo-gallery-9.jpg" alt="dance time" class="gallery__item" />
       </div>
     </article>
-    <footer></footer>
+    <!-- Footer-section -->
+    <footer class="footer">
+      <div class="footer__title">Get in Touch</div>
+      <div class="footer__socials">
+        <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+          <img src="./assets/instagram.png" alt="Instagram Logo" />
+        </a>
+        <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+          <img src="./assets/facebook.png" alt="Facebook Logo" />
+        </a>
+        <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+          <img src="./assets/twitter.png" alt="Twitter Logo" />
+        </a>
+      </div>
+      <div class="footer__details">
+        <div class="footer__details-heading">The Bees Knees Management</div>
+        503 Broadway Penthouse, <br />
+        New York, NY 10012, USA <br />
+        info@thebeesknees.com
+
+        <div class="footer__details-heading">Limitless Artist Group</div>
+        Booking Agent for <br />
+        US / South America / Japan <br />
+        bookings@limitlessag.com
+
+        <div class="footer__details-heading">ARCH Entertainment</div>
+        Booking Agent for <br />
+        UK / EU / AU <br />
+        bookings@archentertainment.com
+      </div>
+      <div class="footer__copyright">Copyright The Bees Knees © 2025 All Rights Reserved</div>
+    </footer>
   </body>
 </html>
