--- a/index.html
+++ b/index.html
@@ -131,31 +131,34 @@
       <div class="footer__title">Get in Touch</div>
       <div class="footer__socials">
         <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-          <img src="./assets/instagram.png" alt="Instagram Logo" />
+          <img src="/assets/icons/svg/Icon-instagram.svg" alt="Instagram Logo" />
         </a>
+
         <a href="https://facebook.com" target="_blank" aria-label="Facebook">
-          <img src="./assets/facebook.png" alt="Facebook Logo" />
+          <img src="/assets/icons/svg/Icon-facebook.svg" alt="Facebook Logo" />
         </a>
+
         <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-          <img src="./assets/twitter.png" alt="Twitter Logo" />
+          <img src="/assets/icons/svg/Icon-twitter.svg" alt="Twitter Logo" />
         </a>
       </div>
-      <div class="footer__details">
-        <div class="footer__details-heading">The Bees Knees Management</div>
-        503 Broadway Penthouse, <br />
-        New York, NY 10012, USA <br />
-        info@thebeesknees.com
+      <footer class="footer__details">
+        <div class="footer__details">
+          <h2 class="footer__details-heading">The Bees Knees Management</h2>
+          <p>503 Broadway Penthouse, <br> New York, NY 10012, USA</p>
+          <p class="footer__details-email">info@thebeesknees.com</p>
 
-        <div class="footer__details-heading">Limitless Artist Group</div>
-        Booking Agent for <br />
-        US / South America / Japan <br />
-        bookings@limitlessag.com
+          <h2 class="footer__details-heading">Limitless Artist Group</h2>
+          <p>Booking Agent for <br> US / South America / Japan</p>
+          <p class="footer__details-email">bookings@limitlessag.com</p>
 
-        <div class="footer__details-heading">ARCH Entertainment</div>
-        Booking Agent for <br />
-        UK / EU / AU <br />
-        bookings@archentertainment.com
-      </div>
+          <h2 class="footer__details-heading">ARCH Entertainment</h2>
+          <p>Booking Agent for <br> UK / EU / AU</p>
+          <p class="footer__details-email">bookings@archentertainment.com</p>
+        </div>
+        <div class="footer-logo">
+          <img src="/assets/logos/Logo-bandsite.svg"  alt="footer logo">
+        </div>
       <div class="footer__copyright">Copyright The Bees Knees © 2025 All Rights Reserved</div>
     </footer>
   </body>
