feat-- footer adjustment for tab

--- a/index.html
+++ b/index.html
@@ -126,39 +126,72 @@
         <img src="/assets/images/Photo-gallery-9.jpg" alt="dance time" class="gallery__item" />
       </div>
     </article>
-    <!-- Footer-section -->
+    <!-- Footer-section
     <footer class="footer">
-      <div class="footer__title">Get in Touch</div>
-      <div class="footer__socials">
-        <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-          <img src="/assets/icons/svg/Icon-instagram.svg" alt="Instagram Logo" />
-        </a>
+      <div>
+        <div>
+          <getInTouch></getInTouch>
+          <socials></socials>
+        </div>
+        <logo></logo>
+      </div> -->
 
-        <a href="https://facebook.com" target="_blank" aria-label="Facebook">
-          <img src="/assets/icons/svg/Icon-facebook.svg" alt="Facebook Logo" />
-        </a>
+    <footer class="footer">
+      <div class="footer__top-container">
+        <div class="footer__header-container">
+          <div class="footer__title">Get in Touch</div>
+          <div class="footer__socials">
+            <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+              <img src="/assets/icons/svg/Icon-instagram.svg" alt="Instagram Logo" />
+            </a>
 
-        <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-          <img src="/assets/icons/svg/Icon-twitter.svg" alt="Twitter Logo" />
-        </a>
+            <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+              <img src="/assets/icons/svg/Icon-facebook.svg" alt="Facebook Logo" />
+            </a>
+
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+              <img src="/assets/icons/svg/Icon-twitter.svg" alt="Twitter Logo" />
+            </a>
+          </div>
+        </div>
+        <div class="footer__logo">
+          <img src="/assets/logos/Logo-bandsite.svg" alt="footer logo" />
+        </div>
       </div>
-      <footer class="footer__details">
-        <div class="footer__details">
-          <h2 class="footer__details-heading">The Bees Knees Management</h2>
-          <p>503 Broadway Penthouse, <br> New York, NY 10012, USA</p>
-          <p class="footer__details-email">info@thebeesknees.com</p>
+      <!-- /TODO ADRESS PLACEMENT IN CSS -->
+      <div class="footer__address-info">
+        <div class="footer__bottom-container">
+          <div class="footer__address-detai">         <div class="footer__address-first">
+            <h2 class="footer__address-heading">The Bees Knees Management</h2>
+            <p>
+              503 Broadway Penthouse, <br />
+              New York, NY 10012, USA
+            </p>
+            <p class="footer__address-email">info@thebeesknees.com</p>
+          </div>
 
-          <h2 class="footer__details-heading">Limitless Artist Group</h2>
-          <p>Booking Agent for <br> US / South America / Japan</p>
-          <p class="footer__details-email">bookings@limitlessag.com</p>
+          <div class="footer__address-second">
+            <h2 class="footer__address-heading">Limitless Artist Group</h2>
+            <p>
+              Booking Agent for <br />
+              US / South America / Japan
+            </p>
+            <p class="footer__address-email">bookings@limitlessag.com</p>
+          </div>
 
-          <h2 class="footer__details-heading">ARCH Entertainment</h2>
-          <p>Booking Agent for <br> UK / EU / AU</p>
-          <p class="footer__details-email">bookings@archentertainment.com</p>
+          <div class="footer__address-third">
+            <h2 class="footer__address-heading">ARCH Entertainment</h2>
+            <p>
+              Booking Agent for <br />
+              UK / EU / AU
+            </p>
+            <p class="footer__address-email">bookings@archentertainment.com</p>
+          </div></div>
+
         </div>
-        <div class="footer-logo">
-          <img src="/assets/logos/Logo-bandsite.svg"  alt="footer logo">
-        </div>
+       </div>
+      </div>
+
       <div class="footer__copyright">Copyright The Bees Knees © 2025 All Rights Reserved</div>
     </footer>
   </body>
