--- a/index.html
+++ b/index.html
@@ -126,15 +126,7 @@
         <img src="/assets/images/Photo-gallery-9.jpg" alt="dance time" class="gallery__item" />
       </div>
     </article>
-    <!-- Footer-section
-    <footer class="footer">
-      <div>
-        <div>
-          <getInTouch></getInTouch>
-          <socials></socials>
-        </div>
-        <logo></logo>
-      </div> -->
+
 
     <footer class="footer">
       <div class="footer__top-container">
@@ -167,7 +159,9 @@
               503 Broadway Penthouse, <br />
               New York, NY 10012, USA
             </p>
-            <p class="footer__address-email">info@thebeesknees.com</p>
+            <p class="footer__address-email">
+              <a href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a>
+              info@thebeesknees.com</p>
           </div>
 
           <div class="footer__address-second">
