--- a/index.html
+++ b/index.html
@@ -153,14 +153,15 @@
       <!-- /TODO ADRESS PLACEMENT IN CSS -->
       <div class="footer__address-info">
         <div class="footer__bottom-container">
-          <div class="footer__address-detai">         <div class="footer__address-first">
+          <div class="footer__address-detai">
+            <div class="footer__address-first">
             <h2 class="footer__address-heading">The Bees Knees Management</h2>
             <p>
               503 Broadway Penthouse, <br />
               New York, NY 10012, USA
             </p>
             <p class="footer__address-email">
-              <a href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a>
+            bookings@archentertainment.com
               info@thebeesknees.com</p>
           </div>
 
