feat:add html comment section in bio

--- a/index.html
+++ b/index.html
@@ -127,6 +127,20 @@
       </div>
     </article>
 
+    <!-- Form -->
+<article class="comment-section">
+  <form >
+<h1>Join the Conversation</h1>
+<label  class="comment_label">Name
+  <input placeholder="Enter your name" name="input" class="comment__input">
+</label>
+<label class="comment__label">
+  COMMENT
+  <textarea placeholder="Add a new comment" name="textarea" class="playpen__textarea"></textarea>
+</label>
+<button class="comment__button" type="submit">Comment </button>
+  </form>
+</article>
 
     <footer class="footer">
       <div class="footer__top-container">
