--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bandsite</title>
     <link rel="stylesheet" href="./styles/bio.css" />
+    <script src="./scripts/index-page.js" defer></script>
     <link rel="stylesheet" href="./styles/global.css" />
   </head>
   <body>
@@ -128,20 +129,22 @@
     </article>
 
     <!-- Form -->
-<article class="comment-section">
-  <form >
-<h1>Join the Conversation</h1>
-<label  class="comment_label">Name
-  <input placeholder="Enter your name" name="input" class="comment__input">
-</label>
-<label class="comment__label">
-  COMMENT
-  <textarea placeholder="Add a new comment" name="textarea" class="playpen__textarea"></textarea>
-</label>
-<button class="comment__button" type="submit">Comment </button>
-  </form>
-</article>
-
+    <article class="comment-section">
+      <form class="form" id="myform">
+        <h1>Join the Conversation</h1>
+        <label for="name" class="comment_label">Name
+          <input placeholder="Enter your name" id="name" class="comment__input">
+        </label>
+        <label for="commenttext" class="comment__label"> <!-- Corrected 'for' attribute -->
+          COMMENT
+          <textarea id="commenttext" placeholder="Add a new comment" class="comment__textarea"></textarea>
+        </label>
+        <button class="comment__button" type="submit">Comment</button>
+      </form>
+    </article>
+    
+    <!-- Comment submitted section -->
+    <div id="commentSubmissions"></div>
     <footer class="footer">
       <div class="footer__top-container">
         <div class="footer__header-container">
@@ -203,5 +206,6 @@
 
       <div class="footer__copyright">Copyright The Bees Knees © 2025 All Rights Reserved</div>
     </footer>
+    <script src="./scripts/index-page.js" defer></script>
   </body>
 </html>
