placeholder added for name and comment form

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
       <h2>Join the Conversation</h2>
       <form class="add-new">
           <label for="name">Name</label>
-          <input name="name" id="name">
+          <input name="name" id="name" placeholder="Enter your name">
          
           <label for="comment">Comment</label>
-          <textarea name="comment" id="comment"></textarea>
+          <textarea name="comment" id="comment" placeholder="Add a new comment"></textarea>
           <button type="submit">Comment</button>
       </form>
   </section>
