--- a/index.html
+++ b/index.html
@@ -9,22 +9,36 @@
   </head>
   <body>
     <header class="header">
-      <img class="header__logo" src="./assets/logos/Logo-bandsite.svg" alt="bandsite-logo" />
+      <a href="../index.html">
+        <img
+          class="header__logo"
+          src="./assets/logos/Logo-bandsite.svg"
+          alt="bandsite-logo"
+        />
+      </a>
       <div class="header__nav-container">
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a href="./index.html" class="header__nav-link" aria-label="Biography">Biography</a>
+              <a
+                href="./index.html"
+                class="header__nav-link"
+                aria-label="Biography"
+                >Biography</a
+              >
             </li>
             <li class="header__nav-item">
-              <a href="./pages/shows.html" class="header__nav-link" aria-label="Shows">Shows</a>
+              <a
+                href="./pages/shows.html"
+                class="header__nav-link"
+                aria-label="Shows"
+                >Shows</a
+              >
             </li>
           </ul>
         </nav>
       </div>
     </header>
-
-    <!-- Hero Section -->
     <section class="hero">
       <div class="hero__image-wrapper">
         <img
@@ -34,11 +48,9 @@
         />
       </div>
       <div class="hero__text">
-        <h2 class="hero__title">The Bee Knees</h2>
+        <h1 class="hero__title">The Bee Knees</h1>
       </div>
     </section>
-
-    <!-- About musician part -->
     <article class="about-musician">
       <div class="about-musician__heading">
         <div class="about-musician__text">
@@ -51,11 +63,10 @@
             alt="The Bees Knees Band Photo"
           />
         </div>
-
         <div class="about-musician__quote">
           <p>
-            “We push each other to be the best. It’s not uncommon for one of us to say ‘this needs
-            to be better, back to the drawing board.’”
+            “We push each other to be the best. It’s not uncommon for one of us
+            to say ‘this needs to be better, back to the drawing board.’”
           </p>
           <p class="about-musician__role">- Lead vocalist of The Bees Knees</p>
         </div>
@@ -63,21 +74,25 @@
           <h3 class="about-musician__title">The Bees Knees</h3>
           <div class="about-musician__info">
             <p class="about-musician__description-text">
-              The Bees Knees is a pop rock band originating from San Francisco, California. The band
-              consists of a dynamic lineup featuring two lead vocalists, two guitarists, a bassist,
-              a keyboardist, and a drummer. The band achieved its first commercial success as an
-              unsigned act, drawing attention from their future manager. Having extensive experience
-              working with both new and seasoned acts, the manager was confident the band could
-              succeed even further with more support, pushing The Bees Knees to sign with a
-              well-known record label.
+              The Bees Knees is a pop rock band originating from San Francisco,
+              California. The band consists of a dynamic lineup featuring two
+              lead vocalists, two guitarists, a bassist, a keyboardist, and a
+              drummer. The band achieved its first commercial success as an
+              unsigned act, drawing attention from their future manager. Having
+              extensive experience working with both new and seasoned acts, the
+              manager was confident the band could succeed even further with
+              more support, pushing The Bees Knees to sign with a well-known
+              record label.
             </p>
             <p class="about-musician__description-text">
-              From there, the band has soared, gaining international recognition and ranking in the
-              top 10 on the Poster Charts. New fans immediately fell in love with the band’s
-              original and organic attitude, solidifying their place as one of the hottest and
-              fastest up-and-coming acts of this century. Fans affectionately refer to themselves as
-              “The Hive” and are drawn to their candid and authentic performances on stage. The Bees
-              Knees are currently recording their second studio album, looking to be released in
+              From there, the band has soared, gaining international recognition
+              and ranking in the top 10 on the Poster Charts. New fans
+              immediately fell in love with the band’s original and organic
+              attitude, solidifying their place as one of the hottest and
+              fastest up-and-coming acts of this century. Fans affectionately
+              refer to themselves as “The Hive” and are drawn to their candid
+              and authentic performances on stage. The Bees Knees are currently
+              recording their second studio album, looking to be released in
               early 2024.
             </p>
           </div>
@@ -87,7 +102,11 @@
     <article class="gallery">
       <h2 class="gallery__title">Photo Gallery</h2>
       <div class="gallery__container">
-        <img src="/assets/images/Photo-gallery-1.jpg" alt="crowd-cheer" class="gallery__item" />
+        <img
+          src="/assets/images/Photo-gallery-1.jpg"
+          alt="crowd-cheer"
+          class="gallery__item"
+        />
         <img
           src="/assets/images/Photo-gallery-2.jpg"
           alt="lady having good vibe"
@@ -123,45 +142,67 @@
           alt="playing with instruement"
           class="gallery__item"
         />
-        <img src="/assets/images/Photo-gallery-9.jpg" alt="dance time" class="gallery__item" />
+        <img
+          src="/assets/images/Photo-gallery-9.jpg"
+          alt="dance time"
+          class="gallery__item"
+        />
       </div>
     </article>
-
-    
-   
     <section>
       <h2>Join the Conversation</h2>
       <form class="add-new">
-        <img class="form-header" src="./assets/images/Mohan-muruge.jpg" class="avatar" alt="avatar image ">
+        <img
+          class="form-header"
+          src="./assets/images/Mohan-muruge.jpg"
+          class="avatar"
+          alt="avatar image "
+        />
+        <div class="comment-form">
           <label for="name">Name</label>
-          <input name="name" id="name" placeholder="Enter your name">
-         
+          <input name="name" id="name" placeholder="Enter your name" />
+
           <label for="comment">Comment</label>
-          <textarea name="comment" id="comment" placeholder="Add a new comment"></textarea>
+          <textarea
+            name="comment"
+            id="comment"
+            placeholder="Add a new comment"
+          ></textarea>
           <button type="submit">Comment</button>
+        </div>
       </form>
-  </section>
-   <!-- Comment submitted section -->
-   <div class="comment-list">
-  </div>
-
-
-
+    </section>
+    <div class="comment-list"></div>
     <footer class="footer">
       <div class="footer__top-container">
         <div class="footer__header-container">
           <div class="footer__title">Get in Touch</div>
           <div class="footer__socials">
-            <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-              <img src="/assets/icons/svg/Icon-instagram.svg" alt="Instagram Logo" />
+            <a
+              href="https://instagram.com"
+              target="_blank"
+              aria-label="Instagram"
+            >
+              <img
+                src="/assets/icons/svg/Icon-instagram.svg"
+                alt="Instagram Logo"
+              />
             </a>
-
-            <a href="https://facebook.com" target="_blank" aria-label="Facebook">
-              <img src="/assets/icons/svg/Icon-facebook.svg" alt="Facebook Logo" />
+            <a
+              href="https://facebook.com"
+              target="_blank"
+              aria-label="Facebook"
+            >
+              <img
+                src="/assets/icons/svg/Icon-facebook.svg"
+                alt="Facebook Logo"
+              />
             </a>
-
             <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-              <img src="/assets/icons/svg/Icon-twitter.svg" alt="Twitter Logo" />
+              <img
+                src="/assets/icons/svg/Icon-twitter.svg"
+                alt="Twitter Logo"
+              />
             </a>
           </div>
         </div>
@@ -169,44 +210,52 @@
           <img src="/assets/logos/Logo-bandsite.svg" alt="footer logo" />
         </div>
       </div>
-      <!-- /TODO ADRESS PLACEMENT IN CSS -->
       <div class="footer__address-info">
         <div class="footer__bottom-container">
           <div class="footer__address-detai">
             <div class="footer__address-first">
-            <h2 class="footer__address-heading">The Bees Knees Management</h2>
-            <p>
-              503 Broadway Penthouse, <br />
-              New York, NY 10012, USA
-            </p>
-            <p class="footer__address-email">
-            bookings@archentertainment.com
-              info@thebeesknees.com</p>
+              <h2 class="footer__address-heading">The Bees Knees Management</h2>
+              <p>
+                503 Broadway Penthouse, <br />
+                New York, NY 10012, USA
+              </p>
+              <p class="footer__address-email">
+                <a href="mailto:bookings@archentertainment.com"
+                  >bookings@archentertainment.com</a
+                ><br />
+                <a href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
+              </p>
+            </div>
+            <div class="footer__address-second">
+              <h2 class="footer__address-heading">Limitless Artist Group</h2>
+              <p>
+                Booking Agent for <br />
+                US / South America / Japan
+              </p>
+              <p class="footer__address-email">
+                <a href="mailto:bookings@limitlessag.com"
+                  >bookings@limitlessag.com</a
+                >
+              </p>
+            </div>
+            <div class="footer__address-third">
+              <h2 class="footer__address-heading">ARCH Entertainment</h2>
+              <p>
+                Booking Agent for <br />
+                UK / EU / AU
+              </p>
+              <p class="footer__address-email">
+                <a href="mailto:bookings@archentertainment.com"
+                  >bookings@archentertainment.com</a
+                >
+              </p>
+            </div>
           </div>
-
-          <div class="footer__address-second">
-            <h2 class="footer__address-heading">Limitless Artist Group</h2>
-            <p>
-              Booking Agent for <br />
-              US / South America / Japan
-            </p>
-            <p class="footer__address-email">bookings@limitlessag.com</p>
-          </div>
-
-          <div class="footer__address-third">
-            <h2 class="footer__address-heading">ARCH Entertainment</h2>
-            <p>
-              Booking Agent for <br />
-              UK / EU / AU
-            </p>
-            <p class="footer__address-email">bookings@archentertainment.com</p>
-          </div></div>
-
         </div>
-       </div>
       </div>
-
-      <div class="footer__copyright">Copyright The Bees Knees © 2025 All Rights Reserved</div>
+      <div class="footer__copyright">
+        Copyright The Bees Knees © 2025 All Rights Reserved
+      </div>
     </footer>
     <script src="./scripts/index-page.js" defer></script>
   </body>
