--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
     </article>
     <section>
-      <h2>Join the Conversation</h2>
+      <h2 class="form-title">Join the Conversation</h2>
       <form class="add-new">
         <img
           class="form-header"
@@ -159,10 +159,10 @@
           alt="avatar image "
         />
         <div class="comment-form">
-          <label for="name">Name</label>
+          <label for="name">NAME</label>
           <input name="name" id="name" placeholder="Enter your name" />
 
-          <label for="comment">Comment</label>
+          <label for="comment">COMMENT</label>
           <textarea
             name="comment"
             id="comment"
@@ -173,36 +173,22 @@
       </form>
     </section>
     <div class="comment-list"></div>
+
     <footer class="footer">
       <div class="footer__top-container">
         <div class="footer__header-container">
           <div class="footer__title">Get in Touch</div>
           <div class="footer__socials">
-            <a
-              href="https://instagram.com"
-              target="_blank"
-              aria-label="Instagram"
-            >
-              <img
-                src="/assets/icons/svg/Icon-instagram.svg"
-                alt="Instagram Logo"
-              />
+            <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+              <img src="/assets/icons/svg/Icon-instagram.svg" alt="Instagram Logo" />
             </a>
-            <a
-              href="https://facebook.com"
-              target="_blank"
-              aria-label="Facebook"
-            >
-              <img
-                src="/assets/icons/svg/Icon-facebook.svg"
-                alt="Facebook Logo"
-              />
+
+            <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+              <img src="/assets/icons/svg/Icon-facebook.svg" alt="Facebook Logo" />
             </a>
+
             <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-              <img
-                src="/assets/icons/svg/Icon-twitter.svg"
-                alt="Twitter Logo"
-              />
+              <img src="/assets/icons/svg/Icon-twitter.svg" alt="Twitter Logo" />
             </a>
           </div>
         </div>
@@ -214,48 +200,39 @@
         <div class="footer__bottom-container">
           <div class="footer__address-detai">
             <div class="footer__address-first">
-              <h2 class="footer__address-heading">The Bees Knees Management</h2>
-              <p>
-                503 Broadway Penthouse, <br />
-                New York, NY 10012, USA
-              </p>
-              <p class="footer__address-email">
-                <a href="mailto:bookings@archentertainment.com"
-                  >bookings@archentertainment.com</a
-                ><br />
-                <a href="mailto:info@thebeesknees.com">info@thebeesknees.com</a>
-              </p>
-            </div>
-            <div class="footer__address-second">
-              <h2 class="footer__address-heading">Limitless Artist Group</h2>
-              <p>
-                Booking Agent for <br />
-                US / South America / Japan
-              </p>
-              <p class="footer__address-email">
-                <a href="mailto:bookings@limitlessag.com"
-                  >bookings@limitlessag.com</a
-                >
-              </p>
-            </div>
-            <div class="footer__address-third">
-              <h2 class="footer__address-heading">ARCH Entertainment</h2>
-              <p>
-                Booking Agent for <br />
-                UK / EU / AU
-              </p>
-              <p class="footer__address-email">
-                <a href="mailto:bookings@archentertainment.com"
-                  >bookings@archentertainment.com</a
-                >
-              </p>
-            </div>
+            <h2 class="footer__address-heading">The Bees Knees Management</h2>
+            <p>
+              503 Broadway Penthouse, <br />
+              New York, NY 10012, USA
+            </p>
+            <p class="footer__address-email">
+            bookings@archentertainment.com
+              info@thebeesknees.com</p>
           </div>
+
+          <div class="footer__address-second">
+            <h2 class="footer__address-heading">Limitless Artist Group</h2>
+            <p>
+              Booking Agent for <br />
+              US / South America / Japan
+            </p>
+            <p class="footer__address-email">bookings@limitlessag.com</p>
+          </div>
+
+          <div class="footer__address-third">
+            <h2 class="footer__address-heading">ARCH Entertainment</h2>
+            <p>
+              Booking Agent for <br />
+              UK / EU / AU
+            </p>
+            <p class="footer__address-email">bookings@archentertainment.com</p>
+          </div></div>
+
         </div>
+       </div>
       </div>
-      <div class="footer__copyright">
-        Copyright The Bees Knees © 2025 All Rights Reserved
-      </div>
+
+      <div class="footer__copyright">Copyright The Bees Knees © 2025 All Rights Reserved</div>
     </footer>
     <script src="./scripts/index-page.js" defer></script>
   </body>
