--- a/index.html
+++ b/index.html
@@ -151,25 +151,27 @@
     </article>
     <section>
       <h2 class="form-title">Join the Conversation</h2>
-      <form class="add-new">
-        <img
-          class="form-header"
-          src="./assets/images/Mohan-muruge.jpg"
-          alt="avatar image "
-        />
-        <div class="comment-form">
-          <label for="name">NAME</label>
-          <input name="name" id="name" placeholder="Enter your name" />
+      <div class="form-container">
+        <form class="add-new">
+          <img
+            class="form-header"
+            src="./assets/images/Mohan-muruge.jpg"
+            alt="avatar image "
+          />
+          <div class="comment-form">
+            <label for="name">NAME</label>
+            <input name="name" id="name" placeholder="Enter your name" />
 
-          <label for="comment">COMMENT</label>
-          <textarea
-            name="comment"
-            id="comment"
-            placeholder="Add a new comment"
-          ></textarea>
-          <button type="submit">Comment</button>
-        </div>
-      </form>
+            <label for="comment">COMMENT</label>
+            <textarea
+              name="comment"
+              id="comment"
+              placeholder="Add a new comment"
+            ></textarea>
+            <button type="submit">Comment</button>
+          </div>
+        </form>
+      </div>
     </section>
     <div class="comment-list"></div>
     <footer class="footer">
