--- a/pages/shows.html
+++ b/pages/shows.html
@@ -52,10 +52,10 @@
         </div>
 
         <div class="hero__content">
-          <h1 class="hero__title">Beautiful Beasts Album</h1>
-          <h2 class="hero__subtitle">Stripes of Yellow x <br /> For The Stings</h2>
-
-
+          <div class="title-container">
+            <h1 class="hero__title">Beautiful Beasts Album</h1>
+            <h2 class="hero__subtitle">Stripes of Yellow x <br /> For The Stings</h2>
+          </div>
             <div class="hero-music">
                 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/565624518&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/topdawgent" title="TopDawgEnt" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/topdawgent/zacari-dont-trip" title="Zacari - &quot;Don&#x27;t Trip&quot;" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
             </div>
