feedback 1 bem convention done

--- a/index.html
+++ b/index.html
@@ -149,26 +149,26 @@
         />
       </div>
     </article>
-    <section>
-      <h2 class="form-title">Join the Conversation</h2>
-      <div class="form-container">
-        <form class="add-new">
+    <section class="comment-section">
+      <h2 class="comment-section__title">Join the Conversation</h2>
+      <div class="comment-section__container">
+        <form class="comment-form">
           <img
-            class="form-header"
+            class="comment-form__avatar"
             src="./assets/images/Mohan-muruge.jpg"
             alt="avatar image "
           />
-          <div class="comment-form">
+          <div class="comment-form__fields">
             <label for="name">NAME</label>
             <input name="name" id="name" placeholder="Enter your name" />
 
-            <label for="comment">COMMENT</label>
+            <label class="comment-form__label" for="comment">COMMENT</label>
             <textarea
               name="comment"
               id="comment"
               placeholder="Add a new comment"
             ></textarea>
-            <button type="submit">Comment</button>
+            <button class="comment-form__button" type="submit">Comment</button>
           </div>
         </form>
       </div>
