--- a/pages/shows.html
+++ b/pages/shows.html
@@ -62,22 +62,18 @@
           </div>
         </div>
       </section>
-      <div class="shows-table">
-        <h2>Shows</h2>
-
-        <div class="table-container">
-
-          <div class="table-header">
-
-            <span class="header-item">Date</span>
-            <span class="header-item">Venue</span>
-            <span class="header-item">Location</span>
-            <span class="header-item">Buy Tickets</span>
-          </div>
-
-          <div id="shows-list"></div>
+      <section class="shows">
+        <h2 class="shows__title">Shows</h2>
+        <div class="shows__table">
+            <div class="shows__header">
+                <span class="shows__header-item">Date</span>
+                <span class="shows__header-item">Venue</span>
+                <span class="shows__header-item">Location</span>
+                <span class="shows__header-item">Buy Tickets</span>
+            </div>
+            <div id="shows-list" class="shows__list"></div>
         </div>
-      </div>
+    </section>
 
 
       <footer class="footer">
