--- a/pages/shows.html
+++ b/pages/shows.html
@@ -20,7 +20,7 @@
     <div class="header__nav-container">
       <nav class="header__nav">
         <ul class="header__nav-list">
-          <li class="header__nav-item">
+          <li class="header__nav-item  ">
             <a
               href="../index.html"
               class="header__nav-link"
@@ -28,7 +28,7 @@
               >Biography</a
             >
           </li>
-          <li class="header__nav-item">
+          <li class="header__nav-item header__nav-item--active">
             <a
               href="../pages/shows.html"
               class="header__nav-link"
