getshowPage from api rendered

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shows</title>
     <link rel="stylesheet" href="../styles/shows.css" />
-    <link rel="stylesheet" href="../styles/global.css">
+    
 
 </head>
 <body>
@@ -69,7 +69,7 @@
                 <span class="shows__header-item">Date</span>
                 <span class="shows__header-item">Venue</span>
                 <span class="shows__header-item">Location</span>
-                <span class="shows__header-item">Buy Tickets</span>
+               
             </div>
             <div id="shows-list" class="shows__list"></div>
         </div>
@@ -158,6 +158,8 @@
           </div>
         </div>
       </footer>
+     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+         <script src="../scripts/band-site-api.js" defer></script>
       <script src="../scripts/build-show-page.js" defer></script>
 </body>
 </html>
