--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bandsite</title>
     <link rel="stylesheet" href="./styles/bio.css" />
-    <link rel="stylesheet" href="./">
+    <link rel="stylesheet" href="./" />
   </head>
   <body>
     <header class="header">
@@ -48,7 +48,7 @@
         />
       </div>
       <div class="hero__text">
-        <h1 class="hero__title">The Bee Knees</h1>
+        <h1 class="hero__caption">The Bee Knees</h1>
       </div>
     </section>
     <section class="about-musician">
@@ -71,7 +71,7 @@
           <p class="about-musician__role">- Lead vocalist of The Bees Knees</p>
         </div>
         <div class="about-musician__description">
-          <h3 class="about-musician__title">The Bees Knees</h3>
+          <h3 class="about-musician__subtitle">The Bees Knees</h3>
           <div class="about-musician__info">
             <p class="about-musician__description-text">
               The Bees Knees is a pop rock band originating from San Francisco,
